feat: identification architecture rework